# avstreamlens

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-dante-st2110-classification.md  0002-substate-window-close-ordering.md  0003-streamstats-targeted-grouping.md
docs/agents/: domain.md
src/: capture.rs  cli.rs  main.rs  main.rs.bak  parser.rs  protocols.rs  report.rs  stats.rs
src/parser/: avb.rs  avdecc.rs  conmon.rs  flow_control.rs  lldp.rs  mdns.rs  ptp.rs  sdp.rs
tests/: cli_integration.rs
