[package]
name = "avstreamlens"
version = "0.1.0"
edition = "2024"
description = "Passive network monitor for professional AV-over-IP protocols: AES67, SMPTE ST 2110, Dante, NDI, AVB, SRT, RIST"
authors = ["vk0eppel <vkoeppel@gmail.com>"]
license = "MIT"
keywords = ["aes67", "dante", "smpte-st2110", "avb", "ndi"]
categories = ["network-programming", "multimedia"]
readme = "README.md"

[dependencies]
pcap = "1.1"
pnet_packet = "0.34"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
strip = true

